# RAGIX

./: .claude_context.md  .cloak-session-audit.jsonl  .gitignore  =60.0  ACTION_PLAN.md  CHANGELOG.md  Code Review - RAGIX v0.7.md  EXAMPLES_SWE.md  EXAMPLES_UNIX_RAG.md  FORREVIEW_IMPROVEMENT_SUGGESTIONS.md  NOTES-v0.33.0.md  PLAN_v0.23_REASONING.md  PLAN_v0.30_REASONING.md  PROFILE_BEHAVIOR.md  RAGIX_COMPONENTS.md  README.md  README_RAGIX_TOOLS.md  RELEASE.md  ROADMAP.md  SESSION_SUMMARY.md  SESSION_SUMMARY_V06.md  SWE_IMPLEMENTATION_SUMMARY.md  SWE_TOOLING.md  TODO.md  V07_PLANNING.md  V08_WASP_PLANNING.md  V09_WASP_TOOLS_PLANNING.md  V10_AST_PLANNING.md  WASM.md  WORKLOAD_V06.md  complexity_explanation.txt  demo.md  environment.yaml  file_list.txt  graphql_usage.txt  launch_ragix.sh  md_files_list.txt  pyproject.toml  python_files_list.txt  ragix.yaml  (+13 more)
.agent_logs/: events.jsonl
.ragix/: episodic_log.jsonl
MCP/: README.md  README_MCP.md  koas_helpers.py  ragix_mcp_server.py  ragix_tools_spec.json
assets/: README.md
benchmark_logs/results/: dolphin-mistral_7b-v2_6-dpo-laser_20251203_120626.json  granite3_1-moe_3b_20251203_114158.json  granite3_1-moe_3b_20251203_120313.json  llama3_latest_20251203_120758.json  mistral_7b-instruct_20251203_114048.json  mistral_7b-instruct_20251203_114440.json  mistral_7b-instruct_20251203_115334.json  mistral_7b-instruct_20251203_120052.json  mistral_7b-instruct_20251203_120230.json  qwen2_5_7b_20251203_115432.json  qwen2_5_7b_20251203_120425.json
demo/koas_docs_audit/: run_relaxed.sh  setup.sh  start_broker.sh
demos/: README.md  reasoning_v30_demo.py  run_reasoning_benchmark.sh  test_classification.py  test_moderate_execution.py  test_simple_execution.py
demos/koas_docs_audit/: README.md  run_restricted.sh
demos/koas_mcp_demo/: README.md  run_demo.sh  server.py  test_koas_tools.py
demos/koas_pipe_demo/: DEMO_OUTPUT.md  README.md  demo_helpers.py  run_demo.sh
demos/ragix_memory_demo/: README.md  mock_llm.sh  run_demo.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  AST_GUIDE.md  CLI_GUIDE.md  INDEX.md  KOAS.md  KOAS_ACTIVITY.md  KOAS_DOCS.md  KOAS_DOCS_ROADMAP.md  KOAS_MCP_REFERENCE.md  KOAS_MEMORY_ARCHITECTURE.md  KOAS_MEMORY_MCP.md  KOAS_PRESENTER.md  KOAS_REVIEW.md  KOAS_SUMMARY.md  KOAS_TRANSLATE.md  MCP.md  PLAYBOOK_GUIDE.md  RAGIX_CHAT.md  RAGIX_SEALED.md  RAGIX_TOOLS_INVENTORY.md  REASONING.md  SOVEREIGN_LLM_OPERATIONS.md  WASP_GUIDE.md
docs/archive/: ACTION_PLAN.md  KOAS_DESIGN.md  README.md  README.old.md  SESSION_SUMMARY_V06.md  TODO_v0.5.md  V05_PROGRESS.md  V06_PROGRESS.md  V07_PLANNING.md  V07_PROGRESS.md  V08_WASP_PLANNING.md  V10_AST_PLANNING.md  V10_NEXT_STEPS.md  WORKLOAD.md
docs/developer/: Baseline proposal - Centralized, auditable activity logging for KOAS (Docs).md  EXAMPLES_UNIX_RAG.md  (+32 more)
examples/: README.md  claude_demo.py  hybrid_search_example.py  resilience_example.py  test_llm_backends.sh  workflow_example.py
plugins/: README.md
ragix-pentest/: .gitignore  Containerfile  DISCLAIMER.md  LICENSE  README.md  build.sh  distrobox.ini  packages.list
ragix_audit/: __init__.py  component_mapper.py  coupling.py  dead_code.py  drift.py  entropy.py  partitioner.py  risk.py  service_detector.py  statistics.py  timeline.py
ragix_chat/: __init__.py  backends.py  cli.py  engine.py  transport.py
ragix_core/: README.md  __init__.py  agent_config.py  agent_graph.py  agent_llm_bridge.py  analysis_cache.py  ast_base.py  ast_java.py  ast_python.py  ast_query.py  ast_viz.py  ast_viz_advanced.py  batch_mode.py  bm25_index.py  caching.py  chunking.py  cli.py  code_metrics.py  config.py  dependencies.py  embeddings.py  experience_corpus.py  graph_executor.py  hybrid_search.py  knowledge_base.py  knowledge_rules.yaml  llm_backends.py  log_integrity.py  logging_utils.py  maven.py  maven_cache.py  monitoring.py  ollama_client.py  orchestrator.py  plugin_system.py  profiles.py  prompt_templates.py  reasoning.py  reasoning_graph.py  reasoning_types.py  (+16 more)
ragix_kernels/: README.md  __init__.py  activity.py  base.py  cache.py  llm_wrapper.py  merkle.py  orchestrator.py  output_sanitizer.py  preflight.py  registry.py  requirements-koas-docs.txt  run_doc_koas.py
ragix_sealed/: README.md  __init__.py
ragix_unix/: README.md  __init__.py  agent.py  ast_cli.py  batch_cli.py  cli.py  index_cli.py  radial_server.py  vault_cli.py  wasp_cli.py
ragix_web/: README.md  __init__.py  server.py
scripts/: check_security_tools.py  fix_markdown.py  install_claude.sh  koas-batch-audit.sh  koas-quick-audit.sh  uninstall_claude.sh
templates/: README.md  security_audit_manifest.yaml
tests/: README.md  __init__.py  conftest.py  test_agent_llm_bridge.py  test_ast.py  test_bm25_index.py  test_caching.py  test_graph_executor.py  test_hybrid_search.py  test_kernels.py  test_marp_postprocess.py  test_mcp_server.py  test_protected_spans.py  test_reasoning_graph.py  test_translate_acceptance.py  test_translate_backends.py  test_translate_cli.py  test_translate_draft.py  test_translate_extract.py  test_translate_harmonize.py  test_translate_qa.py  test_translate_rebuild.py  test_translate_segment.py  test_translate_tm_store.py  test_wasp_integration.py  test_wasp_tools.py  test_workflow_templates.py
wasp_tools/: README.md  __init__.py  manifest.yaml  mdparse.py  search.py  validate.py
(+573 files in other folders)
