[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragix"
version = "0.70.0"
description = "RAGIX - Retrieval-Augmented Generative Interactive eXecution Agent"
authors = [
    {name = "Olivier Vitrac", email = "olivier.vitrac@adservio.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp[cli]>=0.1.0"]
dev = ["pytest>=7.0", "black", "ruff"]
web = ["fastapi>=0.104.0", "uvicorn>=0.24.0", "websockets>=12.0"]
retrieval = ["sentence-transformers>=2.2.0", "numpy>=1.24.0"]
vault = ["cryptography>=41.0.0"]
ci = ["pyyaml>=6.0"]
wasm = ["wasmtime>=14.0.0"]
ast = ["javalang>=0.13.0", "jsonschema>=4.17.0"]
reports = ["jinja2>=3.1.0", "weasyprint>=60.0"]
docs = ["python-docx>=1.0.0", "python-pptx>=0.6.21", "openpyxl>=3.1.0", "odfpy>=1.4.1"]
koas = ["ragix[ast]"]  # KOAS kernels require AST tools
all = ["ragix[mcp,web,retrieval,vault,ci,wasm,ast,reports,koas,docs]"]

[project.scripts]
ragix = "ragix_core.cli:main"
ragix-unix-agent = "ragix_unix.cli:main"
ragix-web = "ragix_web.server:main"
ragix-index = "ragix_unix.index_cli:main"
ragix-batch = "ragix_unix.batch_cli:main"
ragix-vault = "ragix_unix.vault_cli:main"
ragix-wasp = "ragix_unix.wasp_cli:main"
ragix-ast = "ragix_unix.ast_cli:main"
ragix-koas = "ragix_kernels.orchestrator:main"
ragix-memory = "ragix_core.memory.cli:main"

[project.urls]
Homepage = "https://github.com/ovitrac/RAGIX"
Repository = "https://github.com/ovitrac/RAGIX"

[tool.setuptools.packages.find]
where = ["."]
include = ["ragix_core*", "ragix_unix*", "ragix_web*", "ragix_audit*", "ragix_kernels*", "wasp_tools*"]
exclude = ["tests*", "MCP*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
